# embedded-ai-cam-sorting-controller

./: CMakeLists.txt  README.md  package-lock.json  package.json  sdkconfig
PlatformIOfolder/esp32/src/: main.cpp
components/fsm/: CMakeLists.txt  fsm.c  fsm.h
components/motor/: CMakeLists.txt  motor.c  motor.h
main/: CMakeLists.txt  main.c
server/: server.js
